--- a/app/src/main/res/layout/activity_vital_sign_details.xml
+++ b/app/src/main/res/layout/activity_vital_sign_details.xml
@@ -1,229 +1,274 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <RelativeLayout
+
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:padding="10dp">
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="0dp"
+        card_view:cardCornerRadius="4dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:text="Vital Signs"
-            android:textAppearance="?android:textAppearanceLarge" />
+        <LinearLayout
+            android:padding="10dp"
+            android:background="@color/vitalSign1"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="right"
-            android:text="23 Mar, 2017"
-            android:textAppearance="?android:textAppearanceMedium" />
-    </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Blood Pressure"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:shadowColor="@color/whiteF1"
+                android:shadowDx="1.0"
+                android:shadowDy="1.0"
+                android:shadowRadius="2.0"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+            <TextView
+                android:id="@+id/tvBloodPressure"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:shadowColor="@color/whiteF1"
+                android:shadowDx="1.0"
+                android:shadowDy="1.0"
+                android:shadowRadius="2.0"/>
 
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="0dp"
+        card_view:cardCornerRadius="4dp">
     <LinearLayout
+        android:padding="10dp"
+        android:background="@color/vitalSign2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal"
-        android:padding="10dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/medium"
-            android:background="@drawable/ic_circle_bullet"
-            android:backgroundTint="@color/colorAccent" />
+        android:layout_height="64dp"
+        android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/medium"
-            android:text="Blood Pressure: "
-            android:textAppearance="?android:textAppearanceMedium" />
-        <TextView
-            android:id="@+id/tvBloodPressure"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/medium"
-            android:textAppearance="?android:textAppearanceMedium" />
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:layout_marginTop="@dimen/medium"
-        android:background="@color/greyD" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal"
-        android:padding="10dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/medium"
-            android:background="@drawable/ic_circle_bullet"
-            android:backgroundTint="@color/colorAccent" />
-
+            android:text="Weight"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:shadowColor="@color/whiteF1"
+            android:shadowDx="1.0"
+            android:shadowDy="1.0"
+            android:shadowRadius="2.0"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/medium"
-            android:text="Weight: "
-            android:textAppearance="?android:textAppearanceMedium" />
-
+            android:layout_weight="1" />
         <TextView
             android:id="@+id/tvWeight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/medium"
-            android:textAppearance="?android:textAppearanceMedium" />
+            android:textSize="22sp"
+            android:shadowColor="@color/whiteF1"
+            android:shadowDx="1.0"
+            android:shadowDy="1.0"
+            android:shadowRadius="2.0"/>
+
     </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:layout_marginTop="@dimen/medium"
-        android:background="@color/greyD" />
-
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal"
-        android:padding="10dp">
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="0dp"
+        card_view:cardCornerRadius="4dp">
+    <LinearLayout
+        android:padding="10dp"
+        android:background="@color/vitalSign3"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/medium"
-            android:background="@drawable/ic_circle_bullet"
-            android:backgroundTint="@color/colorAccent" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/medium"
-            android:text="Height: "
-            android:textAppearance="?android:textAppearanceMedium" />
+            android:text="Height"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:shadowColor="@color/whiteF1"
+            android:shadowDx="1.0"
+            android:shadowDy="1.0"
+            android:shadowRadius="2.0"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
         <TextView
             android:id="@+id/tvHeight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/medium"
-            android:textAppearance="?android:textAppearanceMedium" />
+            android:textSize="22sp"
+            android:shadowColor="@color/whiteF1"
+            android:shadowDx="1.0"
+            android:shadowDy="1.0"
+            android:shadowRadius="2.0"/>
+
     </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:layout_marginTop="@dimen/medium"
-        android:background="@color/greyD" />
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal"
-        android:padding="10dp">
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="0dp"
+        card_view:cardCornerRadius="4dp">
+    <LinearLayout
+        android:padding="10dp"
+        android:background="@color/vitalSign4"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/medium"
-            android:background="@drawable/ic_circle_bullet"
-            android:backgroundTint="@color/colorAccent" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/medium"
-            android:text="Body Temperature: "
-            android:textAppearance="?android:textAppearanceMedium" />
+            android:text="BodyTemperature"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:shadowColor="@color/whiteF1"
+            android:shadowDx="1.0"
+            android:shadowDy="1.0"
+            android:shadowRadius="2.0"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
         <TextView
             android:id="@+id/tvBodyTemperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/medium"
-            android:textAppearance="?android:textAppearanceMedium" />
+            android:textSize="22sp"
+            android:shadowColor="@color/whiteF1"
+            android:shadowDx="1.0"
+            android:shadowDy="1.0"
+            android:shadowRadius="2.0"/>
+
     </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:layout_marginTop="@dimen/medium"
-        android:background="@color/greyD" />
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal"
-        android:padding="10dp">
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="0dp"
+        card_view:cardCornerRadius="4dp">
+    <LinearLayout
+        android:padding="10dp"
+        android:background="@color/vitalSign5"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/medium"
-            android:background="@drawable/ic_circle_bullet"
-            android:backgroundTint="@color/colorAccent" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/medium"
-            android:text="Heart Rate: "
-            android:textAppearance="?android:textAppearanceMedium" />
+            android:text="HeartRate"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:shadowColor="@color/whiteF1"
+            android:shadowDx="1.0"
+            android:shadowDy="1.0"
+            android:shadowRadius="2.0"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
         <TextView
             android:id="@+id/tvHeartRate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/medium"
-            android:textAppearance="?android:textAppearanceMedium" />
+            android:textSize="22sp"
+            android:shadowColor="@color/whiteF1"
+            android:shadowDx="1.0"
+            android:shadowDy="1.0"
+            android:shadowRadius="2.0"/>
+
     </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:layout_marginTop="@dimen/medium"
-        android:background="@color/greyD" />
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal"
-        android:padding="10dp">
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="0dp"
+        card_view:cardCornerRadius="4dp">
+    <LinearLayout
+        android:padding="10dp"
+        android:background="@color/vitalSign6"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/medium"
-            android:background="@drawable/ic_circle_bullet"
-            android:backgroundTint="@color/colorAccent" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/medium"
-            android:text="Blood Glucose: "
-            android:textAppearance="?android:textAppearanceMedium" />
+            android:text="BloodGlucose"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:shadowColor="@color/whiteF1"
+            android:shadowDx="1.0"
+            android:shadowDy="1.0"
+            android:shadowRadius="2.0"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
         <TextView
             android:id="@+id/tvBloodGlucose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/medium"
-            android:textAppearance="?android:textAppearanceMedium" />
-    </LinearLayout>
+            android:textSize="22sp"
+            android:shadowColor="@color/whiteF1"
+            android:shadowDx="1.0"
+            android:shadowDy="1.0"
+            android:shadowRadius="2.0"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:layout_marginTop="@dimen/medium"
-        android:background="@color/greyD" />
+    </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
