Add Meal Page - Auto suggest food items

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
     <color name="googleRed">#D34836</color>
     <color name="linkBlue">#006CC5</color>
 
+    <color name="white">#FFF</color>
     <color name="whiteF1">#F1F1F1</color>
     <color name="greyE">#EEEEEE</color>
     <color name="greyD">#dddddd</color>
