1. Pass data from diet page to add meal page 2. Make default start date as today

--- a/app/src/main/res/layout/fragment_add_meal.xml
+++ b/app/src/main/res/layout/fragment_add_meal.xml
@@ -32,7 +32,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/tv_meal_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBaseline="@id/tv_meal_name"
