--- a/app/src/main/res/layout/fragment_add_meal.xml
+++ b/app/src/main/res/layout/fragment_add_meal.xml
@@ -112,7 +112,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:padding="@dimen/large" />
+                android:paddingLeft="@dimen/large" />
+            android:paddingRight="@dimen/large" />
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
