--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,5 +40,5 @@
     <color name="vitalSign6">#EFC0FF</color>
 
     <color name="dietBackground1">#6A80C7</color>
-    <color name="dietButtion1">#39C580</color>
+    <color name="dietButton1">#39C580</color>
 </resources>
