--- a/app/src/main/res/layout/fragment_meal_detail.xml
+++ b/app/src/main/res/layout/fragment_meal_detail.xml
@@ -26,7 +26,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/tv_meal_detail_type"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
                     android:layout_weight="1"
@@ -37,7 +37,7 @@
                     android:textStyle="bold"/>
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/tv_meal_detail_date"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_width="match_parent"
@@ -94,7 +94,7 @@
                     app:srcCompat="@drawable/ic_calories"/>
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/tv_meal_detail_calories"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
