--- a/app/src/main/res/layout/fragment_add_food.xml
+++ b/app/src/main/res/layout/fragment_add_food.xml
@@ -45,7 +45,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/large"
-                android:layout_weight=".2"
+                android:layout_weight=".3"
                 android:background="@drawable/editsharp"
                 android:text="1" />
 
@@ -54,8 +54,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/large"
-                android:layout_weight=".8"
+                android:layout_weight=".7"
                 android:background="@drawable/editsharp"
+                android:editable="false"
                 android:text="oz" />
 
 
@@ -100,7 +101,7 @@
                 android:id="@+id/tvCalory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="34"
+                android:text=" 34 "
                 android:textSize="28dp" />
 
             <TextView
