--- a/app/src/main/res/layout/fragment_add_food.xml
+++ b/app/src/main/res/layout/fragment_add_food.xml
@@ -77,7 +77,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/shape_button_round_corner"
                 android:backgroundTint="@color/dietButton2"
-                android:text="ADD TO DIARY"
+                android:text="ADD TO MEAL"
                 android:textColor="@color/whiteF1" />
 
 
@@ -92,9 +92,9 @@
             <ImageView
                 android:id="@+id/ivCalory"
                 android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:maxHeight="32dp"
                 android:maxWidth="32dp"
-                android:layout_height="32dp"
                 android:src="@drawable/calory" />
 
             <TextView
@@ -135,24 +135,24 @@
                 android:layout_weight=".33">
                 <ProgressBar
                     android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_weight=".33"
-                    android:indeterminate="false"
-                    android:progressDrawable="@drawable/circular_progress_bar"
                     android:background="@drawable/circle_shape"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:max="100"/>
+                    android:indeterminate="false"
+                    android:max="100"
+                    android:progressDrawable="@drawable/circular_progress_bar" />
 
 
                 <TextView
                     android:id="@+id/tvProgressBar"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:textAlignment="center"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:text="33%"
+                    android:textAlignment="center"
                     android:textSize="28dp"
                     />
             </RelativeLayout>
@@ -166,23 +166,23 @@
 
                 <ProgressBar
                     android:id="@+id/progressBar2"
+                    style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_weight=".33"
-                    android:indeterminate="false"
-                    android:progressDrawable="@drawable/circular_progress_bar"
                     android:background="@drawable/circle_shape"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:max="100"/>
+                    android:indeterminate="false"
+                    android:max="100"
+                    android:progressDrawable="@drawable/circular_progress_bar" />
 
                 <TextView
                     android:id="@+id/tvProgressBar2"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:textAlignment="center"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:text="33%"
+                    android:textAlignment="center"
                     android:textSize="28dp"
                     />
             </RelativeLayout>
@@ -196,23 +196,23 @@
 
                 <ProgressBar
                     android:id="@+id/progressBar3"
+                    style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_weight=".33"
-                    android:indeterminate="false"
-                    android:progressDrawable="@drawable/circular_progress_bar"
                     android:background="@drawable/circle_shape"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:max="100"/>
+                    android:indeterminate="false"
+                    android:max="100"
+                    android:progressDrawable="@drawable/circular_progress_bar" />
 
                 <TextView
                     android:id="@+id/tvProgressBar3"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:textAlignment="center"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:text="33%"
+                    android:textAlignment="center"
                     android:textSize="28dp"
                     />
             </RelativeLayout>
